<resources>
    <string name="app_name">NewsApplication</string>
    <string name="Greetings_for_login1">Welcome to NewsApp!</string>
    <string name="Greetings_for_login2">There are lots of interesting news waiting for you here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_description">
    <b>NewsApp – Smart News Aggregator</b>\n\n
    NewsApp is a modern news reader with clean UI and seamless navigation. Powered by News API with <b>MVVM</b> architecture and <b>Material3</b> design.\n\n
    <b>✨ Key Features</b>\n
    • <b>Categorized News Feed</b>: Browse news by sections\n
    • <b>Article Details</b>: Full content with save option\n
    • <b>Bookmarks</b>: Save favorites for offline\n
    • <b>Dark/Light</b>: Material3 themes support
</string>
    <string name="home">home</string>
    <string name="share">share</string>
    <string name="bookmarks">bookmarks</string>
    <string name="profile">profile</string>

    <string name="no_internet">No internet connection</string>
    <string name="retrying">Check your connection and try again.</string>
    <string name="try_again">Try again</string>

    <string name="no_bookmarks">Nothing in Bookmarks</string>
    <string name="no_bookmarks_yet">Nothing in Bookmarks yet</string>

</resources>