<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.BooksMarkFragment">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/arrow_back"
        android:background="@drawable/arrow_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="BookMarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/arrow_back"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue_for_login_text"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/icon_home"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/home"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_bookmarks"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/icon_saving_news"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/bookmarks"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/icon_user_for_buttom"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/profile"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>