<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.NewsFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/newsTabLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/tab_primary"
        app:tabTextColor="@color/tab_text_unselected"
        app:tabSelectedTextColor="@color/tab_text_selected"
        app:tabIndicatorColor="@color/tab_indicator"
        app:tabIndicatorHeight="4dp"
        app:tabMode="scrollable"
        app:tabRippleColor="@color/tab_ripple"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/newsTabLayout"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/newsTabLayout"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue_for_login_text"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/icon_home"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/home"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_bookmarks"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/icon_saving_news"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/bookmarks"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/icon_user_for_buttom"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/profile"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>